version 0.9-1
- Fixed a bug in correctTypos: when a record was invalid but no sensible corrections could be made, the function returned an error

version 0.9
- initial version